--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,4 +1,5 @@
 :root {
+    --very-light-grey: #f1f0f0;
     --light-grey: #e2dddd;
     --mid-grey: #999999;
     --black: #292930;
@@ -124,10 +125,16 @@ body {
     border: var(--mid-grey) 1px solid;
 }
 
+.card-selected{
+    background-color: var(--very-light-grey);
+}
+
 .card-content {
     width: 100%;
     position: relative;
-    padding: 0.5rem;
+    margin: 0.5rem;
+
+    background-color: var(--white);
 }
 
 .card-header {
@@ -139,7 +146,6 @@ body {
     position: absolute;
     bottom: 0.5rem;
     border-top: var(--light-grey) 1px solid;
-    background-color: var(--white);
 }
 
 /* Forms */
@@ -238,6 +244,10 @@ button {
 }
 
 .header .link {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
     min-height: 6rem;
 }
 
@@ -250,11 +260,13 @@ button {
 }
 
 .panel.master {
-    flex-basis: 48.6rem;
+    flex-basis: 47.3rem;
+    align-content: flex-start;
+    overflow: auto;
 }
 
 .panel.detail {
-    flex-basis: 72rem;
+    flex-basis: 100vw;
 }
 
 .panel-close {
@@ -268,7 +280,7 @@ button {
 }
 
 .resource {
-    flex-basis: 23.8rem;
+    flex-basis: 22.6rem;
     flex-grow: 0;
     flex-shrink: 0;
     height: 12rem;
