--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,6 +4,7 @@
     --mid-grey: #999999;
     --black: #292930;
     --white: #f9f9ff;
+    --mid-transparent-white: #f9f9ffbb;
     --saltire-blue: rgb(45, 35, 209);
     --body-copy: 1rem;
     --base-unit: 1rem;
@@ -20,6 +21,10 @@
 
 html, body {
     height: 100%;
+}
+
+img{
+    display: block;
 }
 
 input {
@@ -130,10 +135,11 @@ body {
 }
 
 .card-content {
+    display: flex;
+    flex-direction: column;
     width: 100%;
-    position: relative;
+    /*position: relative;*/
     margin: 0.5rem;
-
     background-color: var(--white);
 }
 
@@ -141,10 +147,33 @@ body {
     border-bottom: var(--light-grey) 1px solid;
 }
 
-.card-footer {
-    width: calc(100% - 1rem);
+.card-body{
+    position: relative;
+    flex-grow: 1;
+    overflow: hidden;
+}
+
+.card-body > * {
     position: absolute;
-    bottom: 0.5rem;
+}
+
+.card-image{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.card-description{
+    padding: 0.250rem;
+    background-color: var(--mid-transparent-white);
+}
+.card-footer {
+    /*width: calc(100% - 1rem);*/
+    /*position: absolute;*/
+    /*bottom: 0.5rem;*/
     border-top: var(--light-grey) 1px solid;
 }
 
