--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -388,8 +388,23 @@ button, .button {
 
 /* Leaflet */
 .leaflet-container{
+    height: 100%;
+    width: 100%;
+}
+
+.map-wrapper{
+    position: relative;
     width: calc(100% - 6rem);
     height: 100%;
+}
+
+.map-hud-wrapper{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 300px;
+    height: 100px;
+    background-color: var(--white);
 }
 
 /* Interference */
@@ -415,3 +430,4 @@ button, .button {
         background-position:19% 0
     }
 }
+
