--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -319,6 +319,7 @@ button, .button {
     justify-content: center;
     text-align: center;
     min-height: 3rem;
+    font-family: "Eurostile Next LT W04 SmBd Cn", sans-serif;
 }
 
 .header .active-link{
@@ -400,11 +401,22 @@ button, .button {
 
 .map-hud-wrapper{
     position: absolute;
+    z-index: 999;
     top: 0;
-    left: 0;
+    right: 0;
     width: 300px;
-    height: 100px;
+    min-height: 100px;
     background-color: var(--white);
+}
+
+.hud-row{
+    display: flex;
+    justify-content: center;
+}
+
+.hud-value{
+    font-family: 'Univers Next Typewriter W05 Rg', monospace;
+    text-transform: uppercase;
 }
 
 /* Interference */
