--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -35,7 +35,7 @@ h4,
 h5,
 h6,
 label,
-button{
+button {
     font-family: "Eurostile Next LT W04 Regular", sans-serif;
 }
 
@@ -44,13 +44,14 @@ body,
 p,
 input,
 textarea,
-select{
+select {
     font-family: "Univers Next W01", sans-serif;
 }
 
-ul{
+ul {
     list-style-type: none;
 }
+
 img {
     display: block;
 }
@@ -58,7 +59,7 @@ img {
 button,
 input,
 select,
-textarea{
+textarea {
     border: none;
 }
 
@@ -72,32 +73,32 @@ body {
 .h2,
 .h3,
 .h4,
-.h5{
+.h5 {
     font-family: "Eurostile Next LT W04 Semibold", sans-serif;
 }
 
 .h1,
-h1{
+h1 {
     font-size: 3.177rem;
 }
 
 .h2,
-h2{
+h2 {
     font-size: 2.618rem;
 }
 
 .h3,
-h3{
+h3 {
     font-size: 1.963rem;
 }
 
 .h4,
-h4{
+h4 {
     font-size: 1.618rem;
 }
 
 .h5,
-h5{
+h5 {
     font-size: 1.214rem;
 }
 
@@ -220,7 +221,7 @@ h5{
     font-family: "Eurostile Next W04 Cn SemiBd I", sans-serif;
 }
 
-.card-footer p, .panel-footer p{
+.card-footer p, .panel-footer p {
     font-family: inherit;
 }
 
@@ -242,12 +243,12 @@ button, .button {
     font-family: "Eurostile Next LT W04 Regular", sans-serif;
 }
 
-.delete-button{
+.delete-button {
     background-color: var(--danger);
     color: var(--white);
 }
 
-.save-button{
+.save-button {
     background-color: var(--success);
     color: var(--white);
 }
@@ -262,7 +263,7 @@ button, .button {
     --label-offset: -1.5rem;
 }
 
-.form-group label{
+.form-group label {
     position: absolute;
     height: var(--label-height);
     top: var(--input-padding);
@@ -296,7 +297,7 @@ button, .button {
 }
 
 .input-group input:not([value=""]) + label,
-.input-group textarea:not(:empty) + label{
+.input-group textarea:not(:empty) + label {
     top: var(--label-offset);
     color: var(--mid-grey);
 }
@@ -343,7 +344,7 @@ button, .button {
     font-family: "Eurostile Next LT W04 SmBd Cn", sans-serif;
 }
 
-.header .active-link{
+.header .active-link {
     background-color: var(--light-grey);
     color: var(--black);
 }
@@ -353,12 +354,13 @@ button, .button {
     transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
 }
 
-.edit-link, .edit-link:visited{
+.edit-link, .edit-link:visited {
     display: block;
     background-color: var(--warning);
     color: var(--white);
 }
-.link:hover{
+
+.link:hover {
     background-color: var(--light-grey);
     color: var(--black);
 }
@@ -397,30 +399,30 @@ button, .button {
     padding: 0.5rem;
 }
 
-.resource-detail form{
-    width:40rem;
+.resource-detail form {
+    width: 40rem;
     max-width: 40rem;
 }
 
-.resource-detail img{
+.resource-detail img {
     max-width: 100%;
-    height: auto; 
+    height: auto;
 }
 
 
 /* Leaflet */
-.leaflet-container{
+.leaflet-container {
     height: 100%;
     width: 100%;
 }
 
-.map-wrapper{
+.map-wrapper {
     position: relative;
     width: calc(100% - 6rem);
     height: 100%;
 }
 
-.map-hud-wrapper{
+.map-hud-wrapper {
     position: absolute;
     z-index: 999;
     top: 0;
@@ -430,37 +432,40 @@ button, .button {
     background-color: var(--white);
 }
 
-.hud-row{
+.hud-row {
     display: flex;
     justify-content: center;
 }
 
-.hud-value{
+.hud-value {
     font-family: 'Univers Next Typewriter W05 Rg', monospace;
     text-transform: uppercase;
 }
 
 /* Interference */
 
-.interference{
+.interference {
     position: absolute;
     width: 100vw;
     height: 100vh;
-    background: linear-gradient(331deg, #40296155, #e1dfa909);
-    background-size: 400% 400%;
-    animation: Interference 16s ease infinite;
+    background-image: linear-gradient(331deg, #40296155, #e1dfa909), linear-gradient(90deg, rgba(200, 255, 200, 0.08), rgba(255, 200, 200, 0.01) 10%);
+    background-size: 400% 400%, 25% 100%;
+    animation: Interference 16s ease infinite, Interference 8s linear infinite;
     pointer-events: none;
 }
 
 @keyframes Interference {
-    0%{
-        background-position:19% 0;
+    0% {
+        background-position: 19% 0, 0 0;
+        /*background-size: 400% 400%, 500% 500%;*/
     }
-    50%{
-        background-position:82% 100%
+    50% {
+        background-position: 82% 100%, 50% 0;
+        /*background-size: 400% 400%, 150% 150%;*/
     }
-    100%{
-        background-position:19% 0
+    100% {
+        background-position: 19% 0, 100% 0;
+        /*background-size: 400% 400%, 50% 50%;*/
     }
 }
 
