--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -178,6 +178,9 @@ option{
 }
 
 /* Layout utilities */
+.flex-root{
+    display: flex;
+}
 .flex-filler {
     flex-grow: 1;
     flex-shrink: 1;
@@ -509,6 +512,15 @@ button, .button {
         background-position: 19% 0, 100% 0;
         /*background-size: 400% 400%, 50% 50%;*/
     }
+}
+
+.vignette{
+    box-shadow: 0px 0px 250px 100px inset rgba(0,0,0,0.5);
+    pointer-events: none;
+}
+
+.vignette > *{
+    z-index: -1;
 }
 
 /* Rotation */
