--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -383,7 +383,7 @@ button, .button {
     justify-content: flex-start;
     padding-left: var(--space);
     padding-right: var(--space);
-    background-color: var(--saltire-blue-light);
+    background-color: var(--saltire-blue);
 }
 
 .header .link {
@@ -396,7 +396,7 @@ button, .button {
 }
 
 .header .active-link {
-    background-color: var(--light-grey);
+    background-color: var(--saltire-blue-light);
     color: var(--black);
 }
 
